# docker

./: .dockerignore  .gitmodules  Dockerfile  Dockerfile.binder  Dockerfile.debian-package  Dockerfile.from_source  Dockerfile.package-bionic  Dockerfile.package-xenial  Jenkinsfile  README.md  public.gpg  setup.sh
compiler-explorer/: Dockerfile  c++.local.properties
test/: Dockerfile.test-bionic  Dockerfile.test-xenial
test/cthyb/: CMakeLists.txt  c++  python
test/dft_tools/: CMakeLists.txt  LaVO3-Pnma.inp  SrVO3.ctqmcout  SrVO3.oubwin  SrVO3.outputs  SrVO3.parproj  SrVO3.pmat  SrVO3.struct  SrVO3.sympar  SrVO3.symqmc  analyze_block_structure_from_gf.py  analyze_block_structure_from_gf2.py  blockstructure.py  hk_convert.py  hk_convert_hamiltonian.hk  plovasp  sigma_from_file.py  srvo3_Gloc.py  srvo3_transp.py  sumkdft_basic.py  w90_convert.py  wien2k_convert.py
test/singularity/: Dockerfile  Dockerfile.centos  Dockerfile.triqsall-bionic  Dockerfile.ubuntu  kanamori.py
test/triqs/: CMakeLists.txt  FindTest.cmake  pytriqs  triqs
